dev/ghost-app/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-env-ghostblog
  namespace: staging-env-ghostblog
  labels:
    app: staging-env-ghostblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: staging-env-ghostblog
  template:
    metadata:
      labels:
        app: staging-env-ghostblog
    spec:
      containers:
      - name: staging-env-ghostblog
        image: phelun/ghost-init:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
