dev/ghost-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  ghostblog-svc
  namespace:  ghostblog-ns
spec:
  type: ClusterIP
  selector:
    app:  ghostblog-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
