dev/ghost-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  ghostblog-ing
  namespace:  ghostblog-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "dev.ghostblog"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name:  ghostblog-svc
            port:
              number: 80
